Switching from bootstrap 3 to bootstrap 4

--- a/web/styles/_cart.less
+++ b/web/styles/_cart.less
@@ -6,6 +6,14 @@
   color: @secondary-color;
 }
 
+hr{
+  background: #fff;
+  margin-bottom: 3rem;
+}
+h2{
+  color:#fff;
+}
+
 .table>tbody>tr>td, .table>tfoot>tr>td{
   vertical-align: middle;
 }
