--- a/web/styles/_history.less
+++ b/web/styles/_history.less
@@ -4,6 +4,12 @@
   margin-top: 2em;
   padding:2em;
 
+  tr{
+    td{
+      color:#fff;
+    }
+  }
+
   .row {
     .heading {
       color: @primary-color;
