--- a/web/styles/_home.less
+++ b/web/styles/_home.less
@@ -2,7 +2,11 @@
 
 body {
   video {
-    position: absolute;
+    position: fixed;
     width: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    right: 0;
+    bottom: 0;
   }
 }
