--- a/web/styles/_products.less
+++ b/web/styles/_products.less
@@ -1,15 +1,23 @@
 // main: main.less
 
 .products-component {
-  
-  background: @bg-color;
-  opacity: 0.9;
 
+  opacity: 0.9;
+  hr{
+    background: #fff;
+    margin-bottom: 3rem;
+  }
+  h2{
+    color:#fff;
+  }
   .row {
     margin-top: 20px;
 
     .product-col {
+      margin-bottom: 1.6rem;
+      
       .thumbnail {
+        background: @bg-color;
         height: 250px;
         padding: 0;
         border: none;
@@ -51,7 +59,7 @@
           margin-top: 5px;
           float: right;
           font-weight: 500;
-          color: #449d44;
+          margin-right:1rem;
 
           &:hover {
             color: @link-hover-color;
